# connecting-party-manager

./: .gitignore  .pre-commit-config.yaml  .redocly.lint-ignore.yaml  .sonarcloud.properties  .tool-versions  CHANGELOG.md  Makefile  README.md  Untitled  VERSION  package-lock.json  pyproject.toml  redocly.yaml  sonar-project.properties  sonarcloud-coverage.xml
src/layers/domain/: Makefile  pyproject.toml
src/layers/domain/api/: query.py
src/layers/domain/api/common_steps/: create_device.py  create_epr_product.py  create_product.py  general.py  questionnaire_response_validation.py  read_cpm_product.py  read_epr_product.py  read_product.py  sub_product.py
src/layers/domain/api/common_steps/tests/: test_create_cpm_product.py  test_create_epr_product.py  test_create_product.py  test_read_cpm_product.py  test_read_epr_product.py  test_read_product.py
src/layers/domain/api/sds/: query.py
src/layers/domain/api/tests/: test_search_query.py
src/layers/domain/common_steps/: create_product.py  read_product.py
src/layers/domain/common_steps/tests/: test_create_product.py  test_read_product.py
src/layers/domain/core/: accredited_system_id.py  aggregate_root.py  base.py  common.py  compression.py  constants.py  device.py  device_id.py  device_key.py  entity.py  enum.py  error.py  event.py  event_deserializer.py  fhir_transform.py  load_questionnaire.py  ods_code.py  ods_organisation.py  product.py  product_id.py  product_team.py  questionnaire.py  questionnaire_entity.py  questionnaire_validation_custom_rules.py  reference.py  root.py  spine_device_questionnaire.py  spine_endpoint_questionnaire.py  user.py  validation.py
src/layers/domain/core/cpm_product/: v1.py
src/layers/domain/core/cpm_product/tests/: test_cpm_product_v1.py
src/layers/domain/core/cpm_system_id/: v1.py
src/layers/domain/core/cpm_system_id/generated_ids/: product_ids.json
src/layers/domain/core/cpm_system_id/tests/: test_cpm_system_id_v1.py
src/layers/domain/core/device/: __init__.py  v1.py  v2.py  v3.py
src/layers/domain/core/device/tests/: test_device_v1.py  test_device_v2.py  test_device_v3.py
src/layers/domain/core/device_key/: v1.py  v2.py  v3.py
src/layers/domain/core/device_key/tests/: test_device_key_v1.py  test_device_key_v2.py  test_device_key_v3.py
src/layers/domain/core/device_reference_data/: v1.py
src/layers/domain/core/epr/: database.py
src/layers/domain/core/epr/models/: base_models.py  request_models.py
src/layers/domain/core/epr_product/: v1.py
src/layers/domain/core/ods_organisation/: v1.py  v2.py  v3.py
src/layers/domain/core/product_key/: v1.py
src/layers/domain/core/product_team/: v1.py  v2.py  v3.py
src/layers/domain/core/product_team_epr/: v1.py
src/layers/domain/core/product_team_key/: v1.py
src/layers/domain/core/questionnaire/: load_questionnaire.py  v1.py  v2.py  v3.py
src/layers/domain/core/questionnaires/: __init__.py
src/layers/domain/core/root/: v1.py  v2.py  v3.py
src/layers/domain/core/tests/: test_accredited_system_id.py  test_aggregate_root.py  test_compression.py  test_device.py  test_device_key.py  test_entity.py  test_fhir_transform.py  test_ods_code.py  test_ods_organisation.py  test_product.py  test_product_id.py  test_product_team.py  test_quesionnaire_entity.py  test_questionnaire.py  test_reference.py  test_spine_device_questionnaire.py  test_spine_endpoint_questionnaire.py  test_validation.py  utils.py
src/layers/domain/events/: product_team_created_event.py
src/layers/domain/features/: environment.py  questionnaire.feature
src/layers/domain/features/steps/: questionnaire_steps.py
src/layers/domain/fhir/r4/: __init__.py  cpm_model.py
src/layers/domain/fhir_translation/: device.py  parse.py  product_team.py
src/layers/domain/fhir_translation/tests/: test_fhir_device.py  test_fhir_parse.py  test_fhir_product_team.py  utils.py
src/layers/domain/logging/: step_decorators.py
src/layers/domain/logging/tests/: test_step_decorators.py
src/layers/domain/ods/: __init__.py
src/layers/domain/ods/tests/: test_ods.py
src/layers/domain/repository/: cpm_system_id_repository.py  device_repository.py  errors.py  keys.py  marshall.py  product_team_repository.py  repository.py  transaction.py
src/layers/domain/repository/cpm_product_repository/: v1.py  v3.py
src/layers/domain/repository/cpm_repository/: v1.py
src/layers/domain/repository/device_reference_data_repository/: v1.py
src/layers/domain/repository/device_repository/: __init__.py  v1.py  v2.py  v3.py
src/layers/domain/repository/keys/: v1.py  v2.py  v3.py
src/layers/domain/repository/product_team_epr_repository/: v1.py
src/layers/domain/repository/product_team_repository/: v1.py  v2.py
src/layers/domain/repository/questionnaire_repository/: __init__.py  deserialisers.py
src/layers/domain/repository/repository/: v1.py  v2.py  v3.py
src/layers/domain/repository/tests/: test_compression.py  test_cpm_system_id_repository.py  test_device_repository.py  test_keys.py  test_marshall.py  test_product_team_repository.py  test_repository.py  test_transaction.py
src/layers/domain/request_models/: v1.py
src/layers/domain/request_models/tests/: test_parse_cpm_product_params.py  test_parse_device_params.py  test_parse_device_reference_data.py  test_parse_device_reference_data_params.py  test_parse_product_team_params.py  test_parse_questionnaire_params.py
src/layers/domain/response/: aws_lambda_response.py  coding.py  error_collections.py  error_response.py  operation_outcome.py  render_response.py  render_response_old.py  response_matrix.py  response_models.py  steps.py  steps_old.py  validation_errors.py  validators.py
src/layers/domain/response/tests/: test_aws_lambda_response.py  test_error_response.py  test_operation_outcome.py  test_render_response.py  test_render_response_old.py  test_validation_errors.py
src/layers/domain/src/domain/: __init__.py  product.py  questionnaire.py  questionnaire_entity.py
src/layers/domain/tests/: test_entity.py  test_placeholder_domain.py  test_product.py  test_quesionnaire_entity.py  test_questionnaire.py
(+1777 files in other folders)
