[tool.poetry]
name = "connecting-party-manager"
version = "2023.12.20"
description = "Repository for the Connecting Party Manager API and related services"
authors = ["NHS England"]
license = "LICENSE.md"
readme = "README.md"
packages = [
    { include = "api", from = "src" },
    { include = "domain", from = "src/layers" },
    { include = "event", from = "src/layers" },
    { include = "builder", from = "scripts" },
]

[tool.poetry.dependencies]
python = "3.11.4"
pydantic = "1.10.13"
nhs-context-logging = "^0.4.2"
requests = "^2.31.0"
aws-lambda-powertools = "^2.26.0"
email-validator = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
flake8 = "^6.1.0"
behave = "^1.2.6"
pytest = "^7.4.2"
pytest-custom-exit-code = "^0.3.0"
sh = "^2.0.6"
hypothesis = "^6.87.3"
aws-lambda-powertools = { extras = ["aws-sdk"], version = "^2.26.0" }
parse = "^1.19.1"
pytest-mock = "^3.12.0"
datamodel-code-generator = "^0.25.1"
pyyaml = "^6.0.1"
proxygen-cli = "^2.0.15"
moto = "^4.2.9"
urllib3 = "<2"


[tool.poetry.group.local.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
markers = ["unit", "integration", "smoke", "slow", "wip"]
addopts = "--import-mode=importlib"
filterwarnings = ["ignore:from_type:"]                    # Ignores an annoying hypothesis warning

[tool.black]
line-length = 88
