[tool.poetry]
name = "pi-domain"
version = "0.1.0"
description = ""
authors = ["Chris Kemp <chris.kemp3000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
behave = "^1.2.6"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
markers = [
    "smoke: Smoke tests",
    "integration: Integration tests"
]
